# HKD

./: .pre-commit-config.yaml  .ruff.toml  README.md  grafana.py  pyproject.toml  request_ccres_influxdb_auto.py
.github/workflows/: dependabot.yml  qa.yml
cache/: bucharest.json  cabauw.json  campina.json  chennai.json  chilbolton.json  cluj.json  evora.json  galati.json  granada.json  hyytiala.json  invercargill.json  juelich.json  kenttarova.json  lampedusa.json  laquila.json  leipzig-lim.json  leipzig.json  limassol.json  lindenberg.json  lutjewad.json  mace-head.json  maido.json  marambio.json  melpitz.json  mindelo.json  moufia.json  munich.json  neumayer.json  norunda.json  ny-alesund.json  palaiseau.json  payerne.json  potenza.json  rzecin.json  schneefernerhaus.json  sonnblick.json  tawhaki.json  troll.json  valentia.json  vehmasmaki.json  (+1 more)
conf/: .gitignore  conf_example.toml
grafana/: base.py
requirements/: requirements-dev.txt  requirements.txt
templates/: tempate_halo_one-station.json  template_basta_one-station.json  template_chm15k_one-station.json  template_cl31-51_one-station.json  template_cl61d_one-station.json  template_cs135_one-station.json  template_ct25k_one-station.json  template_halo_one-station.json  template_hatpro_all-stations.json  template_hatpro_one-station.json  template_parsivel_one-station.json  template_rpg-fmcw-35_one-station.json  template_rpg-fmcw-94_one-station.json  template_thies-lnm_one-station.json
utils/: cloudnet.py  influxdb.py  utils.py
